top nav link item for cafe's admin added for tesr purposes

--- a/cafeAdmin.html
+++ b/cafeAdmin.html
@@ -51,17 +51,15 @@
                 <li class="pull-right"><a href="booklet.html">صفحه تکی جزوه</a></li>
                 <li class="pull-right"><a href="cafe.html">صفحه تکی کافه</a></li>
                 <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
-                <li class="pull-right"><a href="auth.html"
-                                          class="normalFontSize2 text-right rtl btn btn-round btn-primary">
+                <li class="pull-right"><a href="auth.html" class="normalFontSize2 text-right rtl btn btn-round btn-primary">
                     <i class="fas fa-sign-in-alt"></i>
                     ورود / عضویت
                 </a></li>
-                <li class="pull-right"><a href="userProfile.html"
-                                          class="normalFontSize2 text-right rtl btn btn-round btn-rose">
+                <li class="pull-right"><a href="userProfile.html" class="normalFontSize2 text-right rtl btn btn-round btn-rose">
                     <i class="fas fa-sign-in-alt"></i>
                     پروفایل کاربر
                 </a></li>
-                <li class="pull-right"><a href="#" class="normalFontSize2 text-right rtl btn btn-round btn-info">
+                <li class="pull-right"><a href="cafeAdmin.html" class="normalFontSize2 text-right rtl btn btn-round btn-info">
                     <i class="fas fa-sign-in-alt"></i>
                     پروفایل ادمین کافه
                 </a></li>
