--- a/userProfile.html
+++ b/userProfile.html
@@ -61,7 +61,7 @@
                     <i class="fas fa-sign-in-alt"></i>
                     پروفایل کاربر
                 </a></li>
-                <li class="pull-right"><a href="#" class="normalFontSize2 text-right rtl btn btn-round btn-info">
+                <li class="pull-right"><a href="cafeAdmin.html" class="normalFontSize2 text-right rtl btn btn-round btn-info">
                     <i class="fas fa-sign-in-alt"></i>
                     پروفایل ادمین کافه
                 </a></li>
