--- a/cafeAdmin.html
+++ b/cafeAdmin.html
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="brand">
-                    <h1 class="title yekanFont rtl">هادی گرامی، خوش آمدید</h1>
+                    <h1 class="title yekanFont rtl">مدیریت گرامی کافه تست، خوش آمدید</h1>
                     <h3 class="yekanFont rtl">
                         با اسنیدز همراه باشید...
                     </h3>
@@ -213,8 +213,7 @@
                                     <span aria-hidden="true"><i class="material-icons">clear</i></span>
                                 </button>
                                 <p class="text-justify yekanFont normalFontSize">
-                                    توجه : فقط تخفیفاتی که استفاده نشده اند قابلیت استفاده دارند، برای دریافت کد تخفیف
-                                    به صفحه کافه ها مراجعه کنید
+                                   توجه : بعد اعمال کد تخفیفتان در محل کافه برای مشتری، حتما آن را در جدول بالا تایید کنید
                                 </p>
                                 <!--</div>-->
                             </div>
