--- a/cafeAdmin.html
+++ b/cafeAdmin.html
@@ -119,7 +119,7 @@
                         <a type="button" class="btn btn-danger">خروج از حساب</a>
                         <a type="button" class="btn btn-secondary" data-toggle="collapse"
                            data-target="#collapseExample3" aria-expanded="false"
-                           aria-controls="collapseExample">تنظیمات</a>
+                           aria-controls="collapseExample">ویرایش پروفایل کافه</a>
                         <a type="button" class="btn btn-secondary" data-toggle="collapse"
                            data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
                             تخفیفات کافه شما
