--- a/bookletList.html
+++ b/bookletList.html
@@ -20,7 +20,7 @@
     <link href="assets/css/material-kit.css?v=1.2.1" rel="stylesheet"/>
     <link rel="stylesheet" href="assets/css/sneedsCustom.css">
 </head>
-<body style="height:100%">
+<body class="ecommerce-page" style="height:100%">
 <!--<a href="#" class="goUpBtn btn btn-round btn-default btn-fab btn-fab-mini" id="goUpBtn" style="z-index:99999;position:absolute;bottom:0;-->
 <!--left:0;">-->
     <!--<i class="material-icons">keyboard_arrow_up</i>-->
@@ -83,126 +83,19 @@
     </div>
 </nav>
 
-
-<div id="carousel-example-generic" class="carousel slide rtl" data-ride="carousel">
-    <div class="carousel slide rtl" data-ride="carousel">
-
-        <!-- Indicators -->
-        <ol class="carousel-indicators rtl">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-
-                <div class="page-header header-filter">
-
-                    <div class="container h-100" style="z-index:100">
-                        <div class="row">
-                            <div class="col-md text-right rtl">
-                                <h1 class="title yekanFont">اسنیدز، مرجع رفع نیاز های دانشجویی</h1>
-                                <h4 class="yekanFont">بخش جزوات اسنیدز شامل دیتابیسی عظیم از جزوات دانشگاهیست که به صورت
-                                    رایگان در دسترس شما خواهد بود</h4>
-                                <br>
-                                <div class="buttons">
-                                    <a href="#sneedsBookletListFirst"
-                                       class="btn btn-primary btn-lg yekanFont customHoverButton">
-                                        مشاهده لیست جزوات
-                                        <i class="material-icons">
-                                            keyboard_arrow_down
-                                        </i>
-                                    </a>
-                                    <a target="_blank" href="http://www.sneeds.ir"
-                                       class="btn btn-just-icon btn-white btn-simple btn-lg">
-                                        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                                            <path fill="#fff"
-                                                  d="M9.78,18.65L10.06,14.42L17.74,7.5C18.08,7.19 17.67,7.04 17.22,7.31L7.74,13.3L3.64,12C2.76,11.75 2.75,11.14 3.84,10.7L19.81,4.54C20.54,4.21 21.24,4.72 20.96,5.84L18.24,18.65C18.05,19.56 17.5,19.78 16.74,19.36L12.6,16.3L10.61,18.23C10.38,18.46 10.19,18.65 9.78,18.65Z"/>
-                                        </svg>
-                                    </a>
-                                    <a target="_blank" href="http://www.sneeds.ir"
-                                       class="btn btn-just-icon btn-white btn-simple btn-lg">
-                                        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                                            <path fill="#fff"
-                                                  d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z"/>
-                                        </svg>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <video autoplay muted loop id="myVideo" style="z-index:-100;position:absolute;top:0;left:0">
-                        <source src="movie.mp4" type="video/mp4">
-                    </video>
-                </div>
-
-            </div>
-            <div class="item">
-                <div class="page-header header-filter" style="background-image: url('assets/img/dg1.jpg');">
-
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-8 col-md-offset-2 text-center  rtl">
-                                <h1 class="title yekanFont">عنوان تست</h1>
-                                <h4 class="yekanFont">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                                    استفاده
-                                    از طراحان گرافیک است.</h4>
-                                <br>
-                                <h6 class="yekanFont">تماس با ما:</h6>
-                                <div class="buttons">
-                                    <a href="#pablo" class="btn btn-just-icon btn-white btn-simple btn-lg">
-                                        <i class="fa fa-twitter"></i>
-                                    </a>
-                                    <a href="#pablo" class="btn btn-just-icon btn-white btn-simple btn-lg">
-                                        <i class="fa fa-facebook-square"></i>
-                                    </a>
-                                    <a href="#pablo" class="btn btn-just-icon btn-white btn-simple btn-lg">
-                                        <i class="fa fa-google-plus"></i>
-                                    </a>
-                                    <a href="#pablo" class="btn btn-just-icon btn-white btn-simple btn-lg">
-                                        <i class="fa fa-instagram"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="item">
-                <div class="page-header header-filter" style="background-image: url('assets/img/dg1.jpg');">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-7 col-md-offset-5 text-right">
-                                <h1 class="title yekanFont">مسابقه اسنیدزی</h1>
-                                <h4 class="yekanFont">کافه برید، جایزه ببرید</h4>
-                                <br>
-
-                                <div class="buttons">
-                                    <a href="#pablo" class="btn btn-white btn-simple btn-lg yekanFont">
-                                        <i class="material-icons">share</i>درباره اسنیدز
-                                    </a>
-                                    <a href="#pablo" class="btn btn-danger btn-lg yekanFont">
-                                        <i class="material-icons">shopping_cart</i> ورود به صفحه مسابقه
-                                    </a>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
+<div class="page-header header-filter header-small" data-parallax="true"
+     style="background-image: url(assets/img/note.jpg); transform: translate3d(0px, 0px, 0px);">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="brand">
+                    <h1 class="title yekanFont rtl">مخرن جزوات دانشگاهی اسنیدز</h1>
+                    <h3 class="yekanFont rtl">
+                        دیتابیسی به روز و در حال تکمیل از جزوات و نمونه سوالات دانشگاهی از اساتید و دانشگاه های برتر کشور
+                    </h3>
                 </div>
             </div>
         </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control rtl" href="#carousel-example-generic" data-slide="prev">
-            <i class="material-icons">keyboard_arrow_left</i>
-        </a>
-        <a class="right carousel-control rtl" href="#carousel-example-generic" data-slide="next">
-            <i class="material-icons">keyboard_arrow_right</i>
-        </a>
     </div>
 </div>
 
@@ -210,7 +103,7 @@
 <div id="sneedsBookletListFirst"></div>
 <div class="wrapper">
     <!-- you can use the class main-raised if you want the main area to be as a page with shadows -->
-    <div class="main">
+    <div class="main main-raised">
         <div class="container">
 
             <div class="row">
@@ -224,7 +117,9 @@
                     </nav>
                 </div>
             </div>
-
+            <hr>
+            <h2 class="section-title yekanFont rtl text-right">لیست جزوات</h2>
+            <hr>
             <div class="row">
                 <!--<div class="col-md-6 text-center">-->
                 <!--<button class="btn btn-info yekanFont w-100" style="font-size:20px;" data-toggle="modal"-->
