small detailed bug fixes to ensure similiraty between content related pages

--- a/cafeList.html
+++ b/cafeList.html
@@ -20,14 +20,15 @@
     <link href="assets/css/material-kit.css?v=1.2.1" rel="stylesheet"/>
     <link rel="stylesheet" href="assets/css/sneedsCustom.css">
 </head>
+
 <body class="ecommerce-page">
 <div id="siteTop"></div>
 <!-- Navbar will come here -->
 
-<nav class="navbar navbar-right navbar-transparent navbar-fixed-top"
-     role="navigation">
+<nav class="navbar navbar-right navbar-transparent navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header pull-right">
+
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -37,13 +38,14 @@
             </button>
 
             <a class="navbar-brand serifFont" href="http://www.sneeds.ir" target="_blank">
-                    <span class="serifFont brandName float-right">
-                        اسنیدز
-                    </span>
+                <span class="serifFont brandName float-right">
+                     اسنیدز
+                </span>
                 <span class="brandLogo float-left">
                         <img src="assets/img/sneedsLogo.png" alt="sneeds logo" class="img-responsive">
-                    </span>
+                </span>
             </a>
+
         </div>
 
         <div class="collapse navbar-collapse yekanFont" id="bs-example-navbar-collapse-1">
@@ -54,15 +56,19 @@
                 <li class="pull-right"><a href="booklet.html" target="">صفحه تکی جزوه</a></li>
                 <li class="pull-right"><a href="cafe.html">صفحه تکی کافه</a></li>
                 <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
-                <li class="pull-right"><a href="auth.html" class="normalFontSize2 text-right rtl btn btn-round btn-primary">
-                    <i class="fas fa-sign-in-alt"></i>
+                <li class="pull-right">
+                    <a href="auth.html" class="normalFontSize2 text-right rtl btn btn-round btn-primary">
+                        <i class="fas fa-sign-in-alt"></i>
                     ورود / عضویت
-                </a></li>
+                    </a>
+                </li>
+
                 <li class="pull-right"><a href="userProfile.html" class="normalFontSize2 text-right rtl btn btn-round btn-rose">
                     <i class="fas fa-sign-in-alt"></i>
                     پروفایل کاربر
                 </a></li>
-                <li class="pull-right"><a href="cafeAdmin.html" class="normalFontSize2 text-right rtl btn btn-round btn-info">
+                <li class="pull-right"><a href="cafeAdmin.html"
+                                          class="normalFontSize2 text-right rtl btn btn-round btn-info">
                     <i class="fas fa-sign-in-alt"></i>
                     پروفایل ادمین کافه
                 </a></li>
@@ -98,13 +104,9 @@
 </div>
 
 
-
 <div class="main main-raised">
-
     <div class="section">
-
         <div class="container">
-
             <div class="row">
                 <div class="col-md-12">
                     <nav aria-label="breadcrumb">
@@ -115,7 +117,7 @@
                     </nav>
                 </div>
             </div>
-
+            <hr>
             <h2 class="section-title yekanFont rtl text-right">لیست کافه ها</h2>
             <hr>
             <div class="row">
@@ -138,17 +140,17 @@
                             </p>
                             <div class="footer text-center">
                                 <!--<div class="pull-right">-->
-                                    <!--<div class="price-container">-->
-                                        <!--&lt;!&ndash;<span class="price price-old"> €1,430</span>&ndash;&gt;-->
-                                        <!--&lt;!&ndash;<span class="price price-new yekanFont">لایک ها : 20</span>&ndash;&gt;-->
-                                    <!--</div>-->
-                                    <!--<div class="stats">-->
-                                        <!--&lt;!&ndash;<button type="button" rel="tooltip" title=""&ndash;&gt;-->
-                                                <!--&lt;!&ndash;class="btn btn-just-icon btn-simple btn-rose yekanFont"&ndash;&gt;-->
-                                                <!--&lt;!&ndash;data-original-title="لایک کنید!">&ndash;&gt;-->
-                                            <!--&lt;!&ndash;<i class="material-icons">favorite</i>&ndash;&gt;-->
-                                        <!--&lt;!&ndash;</button>&ndash;&gt;-->
-                                    <!--</div>-->
+                                <!--<div class="price-container">-->
+                                <!--&lt;!&ndash;<span class="price price-old"> €1,430</span>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<span class="price price-new yekanFont">لایک ها : 20</span>&ndash;&gt;-->
+                                <!--</div>-->
+                                <!--<div class="stats">-->
+                                <!--&lt;!&ndash;<button type="button" rel="tooltip" title=""&ndash;&gt;-->
+                                <!--&lt;!&ndash;class="btn btn-just-icon btn-simple btn-rose yekanFont"&ndash;&gt;-->
+                                <!--&lt;!&ndash;data-original-title="لایک کنید!">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<i class="material-icons">favorite</i>&ndash;&gt;-->
+                                <!--&lt;!&ndash;</button>&ndash;&gt;-->
+                                <!--</div>-->
                                 <!--</div>-->
                                 <div>
                                     <a href="#" class="btn btn-primary yekanFont ">ورود به صفحه کافه</a>
