top nav menu fixed for landing page directions

--- a/landing.html
+++ b/landing.html
@@ -51,8 +51,8 @@
 
         <div class="collapse navbar-collapse yekanFont" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right text-right rtl">
-                <li class="pull-right"><a href="#">صفحه اول</a></li>
-                <li class="pull-right active"><a href="bookletList.html">جزوات</a></li>
+                <li class="pull-right active"><a href="landing.html">صفحه اول</a></li>
+                <li class="pull-right"><a href="bookletList.html">جزوات</a></li>
                 <li class="pull-right"><a href="cafeList.html" target="nk">کافه ها</a></li>
                 <li class="pull-right"><a href="booklet.html" target="">صفحه تکی جزوه</a></li>
                 <li class="pull-right"><a href="cafe.html">صفحه تکی کافه</a></li>
