--- a/bookletList.html
+++ b/bookletList.html
@@ -51,7 +51,7 @@
 
         <div class="collapse navbar-collapse yekanFont" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right text-right rtl">
-                <li class="pull-right"><a href="#">صفحه اول</a></li>
+                <li class="pull-right active"><a href="landing.html">صفحه اول</a></li>
                 <li class="pull-right active"><a href="bookletList.html">جزوات</a></li>
                 <li class="pull-right"><a href="cafeList.html" target="nk">کافه ها</a></li>
                 <li class="pull-right"><a href="booklet.html" target="">صفحه تکی جزوه</a></li>
