fixed some beautiful :)) bugs

--- a/userProfile.html
+++ b/userProfile.html
@@ -118,28 +118,31 @@
             <hr>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <div class="btn-group yekanFont" role="group" aria-label="Basic example">
-                        <a type="button" class="btn btn-danger">خروج از حساب</a>
-                        <a type="button" class="btn btn-secondary" data-toggle="collapse"
-                           data-target="#collapseExample3" aria-expanded="false"
-                           aria-controls="collapseExample">تنظیمات</a>
-                        <a type="button" class="btn btn-secondary" data-toggle="collapse"
-                           data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">تخفیفات
-                            کافه</a>
-                        <a type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#collapseExample"
-                           aria-expanded="false" aria-controls="collapseExample">مشاهده پروفایل</a>
-                        <a type="button" class="btn btn-success">عملیات ها :</a>
+                    <div class="btn-group yekanFont normalFontSize2" role="group" aria-label="Basic example">
+                        <a type="button" class="btn btn-danger normalFontSize2">خروج از حساب</a>
+                        <a type="button" class="btn btn-secondary normalFontSize2" data-toggle="collapse" data-target="#settingsCollapse" aria-expanded="false" aria-controls="settingsCollapse">تنظیمات</a>
+                        <a type="button" class="btn btn-secondary normalFontSize2" data-toggle="collapse" data-target="#discountsCollapse" aria-expanded="false" aria-controls="discountsCollapse">تخفیفات کافه</a>
+                        <a type="button" class="btn btn-secondary normalFontSize2" data-toggle="collapse" data-target="#watchProfileCollapse" aria-expanded="false" aria-controls="watchProfileCollapse">مشاهده پروفایل</a>
+                        <a type="button" class="btn btn-secondary normalFontSize2" data-toggle="collapse" data-target="#downloadedBooklets" aria-expanded="false" aria-controls="downloadedBooklets">جزوات دانلود شده</a>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="collapse" id="collapseExample">
+                    <div class="collapse" id="watchProfileCollapse">
                         <div class="card card-body" style="box-shadow:none !important;">
                             پروفایل کاربر
                         </div>
                     </div>
-                    <div class="collapse" id="collapseExample2">
+
+                    <div class="collapse" id="downloadedBooklets">
+                        <div class="card card-body" style="box-shadow:none !important;">
+                            جزوات دانلود شده
+                        </div>
+                    </div>
+
+
+                    <div class="collapse" id="discountsCollapse">
                         <div class="card card-body" style="box-shadow:none !important;">
                             <div class="table-responsive">
                                 <table class="table table-striped yekanFont">
@@ -212,7 +215,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="collapse" id="collapseExample3">
+                    <div class="collapse" id="settingsCollapse">
                         <div class="card card-body" style="box-shadow:none !important;">
                             تنظیمات
                         </div>
