profile menu size fixed, colored bug fixed

--- a/cafeAdmin.html
+++ b/cafeAdmin.html
@@ -116,17 +116,16 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="btn-group yekanFont" role="group" aria-label="Basic example">
-                        <a type="button" class="btn btn-danger">خروج از حساب</a>
-                        <a type="button" class="btn btn-secondary" data-toggle="collapse"
-                           data-target="#collapseExample3" aria-expanded="false"
+                        <a type="button" class="btn btn-danger normalFontSize2">خروج از حساب</a>
+                        <a type="button" class="btn btn-info normalFontSize2" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false"
                            aria-controls="collapseExample">ویرایش پروفایل کافه</a>
-                        <a type="button" class="btn btn-secondary" data-toggle="collapse"
+                        <a type="button" class="btn btn-info normalFontSize2" data-toggle="collapse"
                            data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
                             تخفیفات کافه شما
                         </a>
                         <!--<a type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#collapseExample"-->
                         <!--aria-expanded="false" aria-controls="collapseExample">مشاهده پروفایل</a>-->
-                        <a type="button" class="btn btn-success">عملیات ها :</a>
+                        <!--<a type="button" class="btn btn-success">عملیات ها :</a>-->
                     </div>
                 </div>
             </div>
