--- a/userProfile.html
+++ b/userProfile.html
@@ -120,10 +120,10 @@
                 <div class="col-md-12 text-center">
                     <div class="btn-group yekanFont normalFontSize2" role="group" aria-label="Basic example">
                         <a type="button" class="btn btn-danger normalFontSize2">خروج از حساب</a>
-                        <a type="button" class="btn btn-secondary normalFontSize2" data-toggle="collapse" data-target="#settingsCollapse" aria-expanded="false" aria-controls="settingsCollapse">تنظیمات</a>
-                        <a type="button" class="btn btn-secondary normalFontSize2" data-toggle="collapse" data-target="#discountsCollapse" aria-expanded="false" aria-controls="discountsCollapse">تخفیفات کافه</a>
-                        <a type="button" class="btn btn-secondary normalFontSize2" data-toggle="collapse" data-target="#watchProfileCollapse" aria-expanded="false" aria-controls="watchProfileCollapse">مشاهده پروفایل</a>
-                        <a type="button" class="btn btn-secondary normalFontSize2" data-toggle="collapse" data-target="#downloadedBooklets" aria-expanded="false" aria-controls="downloadedBooklets">جزوات دانلود شده</a>
+                        <a type="button" class="btn btn-info normalFontSize2" data-toggle="collapse" data-target="#settingsCollapse" aria-expanded="false" aria-controls="settingsCollapse">تنظیمات</a>
+                        <a type="button" class="btn btn-info normalFontSize2" data-toggle="collapse" data-target="#discountsCollapse" aria-expanded="false" aria-controls="discountsCollapse">تخفیفات کافه</a>
+                        <a type="button" class="btn btn-info normalFontSize2" data-toggle="collapse" data-target="#watchProfileCollapse" aria-expanded="false" aria-controls="watchProfileCollapse">مشاهده پروفایل</a>
+                        <a type="button" class="btn btn-info normalFontSize2" data-toggle="collapse" data-target="#downloadedBooklets" aria-expanded="false" aria-controls="downloadedBooklets">جزوات دانلود شده</a>
                     </div>
                 </div>
             </div>
