--- a/cafe.html
+++ b/cafe.html
@@ -143,11 +143,13 @@
                     <i class="fas fa-sign-in-alt"></i>
                     ورود / عضویت
                 </a></li>
-                <li class="pull-right"><a href="userProfile.html" class="normalFontSize2 text-right rtl btn btn-round btn-rose">
+                <li class="pull-right"><a href="userProfile.html"
+                                          class="normalFontSize2 text-right rtl btn btn-round btn-rose">
                     <i class="fas fa-sign-in-alt"></i>
                     پروفایل کاربر
                 </a></li>
-                <li class="pull-right"><a href="cafeAdmin.html" class="normalFontSize2 text-right rtl btn btn-round btn-info">
+                <li class="pull-right"><a href="cafeAdmin.html"
+                                          class="normalFontSize2 text-right rtl btn btn-round btn-info">
                     <i class="fas fa-sign-in-alt"></i>
                     پروفایل ادمین کافه
                 </a></li>
@@ -166,7 +168,8 @@
     </div>
 </nav>
 
-<div class="page-header header-filter" data-parallax="true" filter-color="primary" style="background-image: url('assets/img/cafe.jpg'); transform: translate3d(0px, 0px, 0px);">
+<div class="page-header header-filter" data-parallax="true" filter-color="primary"
+     style="background-image: url('assets/img/cafe.jpg'); transform: translate3d(0px, 0px, 0px);">
     <div class="container">
         <div class="row title-row">
             <div class="col-md-4 col-md-offset-8">
@@ -203,7 +206,7 @@
                                 <div class="item"><img src="assets/img/cafe2.jpg"></div>
                                 <div class="item"><img src="assets/img/cafe3.jpg"></div>
                                 <div class="item"><img src="assets/img/cafe4.jpg"></div>
-                                <div class="item"><img src="assets/img/cafe.jpg"></div>
+                                <!--<div class="item"><img src="assets/img/cafe.jpg"></div>-->
                             </div>
                         </div>
                         <div class="clearfix">
@@ -218,15 +221,18 @@
                                                 src="assets/img/cafe3.jpg"></div>
                                         <div data-target="#carousel" data-slide-to="3" class="thumb"><img
                                                 src="assets/img/cafe4.jpg"></div>
-                                        <div data-target="#carousel" data-slide-to="4" class="thumb"><img
-                                                src="assets/img/cafe.jpg"></div>
+                                        <!--<div data-target="#carousel" data-slide-to="4" class="thumb"><img-->
+                                        <!--src="assets/img/cafe.jpg"></div>-->
                                     </div>
                                 </div>
                                 <!-- /carousel-inner -->
-                                <a class="left carousel-control" href="#thumbcarousel" role="button" data-slide="prev">
-                                    <i class="fa fa-angle-left" aria-hidden="true"></i> </a> <a
-                                    class="right carousel-control" href="#thumbcarousel" role="button"
-                                    data-slide="next"><i class="fa fa-angle-right" aria-hidden="true"></i> </a></div>
+                                <!--<a class="left carousel-control" href="#thumbcarousel" role="button" data-slide="prev">-->
+                                    <!--<i class="fa fa-angle-left" aria-hidden="true"></i> -->
+                                <!--</a>-->
+                                <!--<a class="right carousel-control" href="#thumbcarousel" role="button"-->
+                                    <!--data-slide="next"><i class="fa fa-angle-right" aria-hidden="true"></i>-->
+                                <!--</a>-->
+                            </div>
                             <!-- /thumbcarousel -->
 
                         </div>
