visited booklet's list added to user profile

--- a/userProfile.html
+++ b/userProfile.html
@@ -137,13 +137,81 @@
 
                     <div class="collapse" id="downloadedBooklets">
                         <div class="card card-body" style="box-shadow:none !important;">
-                            جزوات دانلود شده
+                            <hr>
+                            <h2 class="text-right yekanFont">لیست جزوات دانلود شده</h2>
+                            <div class="table-responsive">
+                                <table class="table table-striped yekanFont">
+                                    <thead>
+                                    <tr>
+                                        <th class="text-center">#</th>
+                                        <th class="text-right">اسم جزوه</th>
+                                        <th class="text-right">موضوع</th>
+                                        <th class="text-right">نویسنده</th>
+                                        <th class="text-right">لینک مشاهده</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                        <td class="text-center">1</td>
+                                        <td>معادلات دکتر واعظ پور</td>
+                                        <td>معادلات دیفرانسیل</td>
+                                        <td>آقای هادی</td>
+                                        <td class="td-actions text-right">
+                                            <a href="#" class="btn btn-success yekanFont">
+                                                <i class="material-icons">developer_board</i>
+                                                مشاهده جزوه
+                                            </a>
+                                            <!--<button type="button" rel="tooltip" class="btn btn-success yekanFont"-->
+                                                    <!--data-original-title="" title="">-->
+                                                <!--قابل استفاده-->
+                                                <!--&lt;!&ndash;<i class="material-icons">edit</i>&ndash;&gt;-->
+                                            <!--</button>-->
+                                        </td>
+                                    </tr>
+                                        <tr>
+                                        <td class="text-center">1</td>
+                                        <td>معادلات دکتر واعظ پور</td>
+                                        <td>معادلات دیفرانسیل</td>
+                                        <td>آقای هادی</td>
+                                        <td class="td-actions text-right">
+                                            <a href="#" class="btn btn-success yekanFont">
+                                                <i class="material-icons">developer_board</i>
+                                                مشاهده جزوه
+                                            </a>
+                                            <!--<button type="button" rel="tooltip" class="btn btn-success yekanFont"-->
+                                            <!--data-original-title="" title="">-->
+                                            <!--قابل استفاده-->
+                                            <!--&lt;!&ndash;<i class="material-icons">edit</i>&ndash;&gt;-->
+                                            <!--</button>-->
+                                        </td>
+                                    </tr>
+                                        <tr>
+                                        <td class="text-center">1</td>
+                                        <td>معادلات دکتر واعظ پور</td>
+                                        <td>معادلات دیفرانسیل</td>
+                                        <td>آقای هادی</td>
+                                        <td class="td-actions text-right">
+                                            <a href="#" class="btn btn-success yekanFont">
+                                                <i class="material-icons">developer_board</i>
+                                                مشاهده جزوه
+                                            </a>
+                                            <!--<button type="button" rel="tooltip" class="btn btn-success yekanFont"-->
+                                            <!--data-original-title="" title="">-->
+                                            <!--قابل استفاده-->
+                                            <!--&lt;!&ndash;<i class="material-icons">edit</i>&ndash;&gt;-->
+                                            <!--</button>-->
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <hr >
                         </div>
                     </div>
-
-
                     <div class="collapse" id="discountsCollapse">
                         <div class="card card-body" style="box-shadow:none !important;">
+                            <hr>
+                            <h2 class="text-right yekanFont">لیست تخفیفات کافه ها</h2>
                             <div class="table-responsive">
                                 <table class="table table-striped yekanFont">
                                     <thead>
