change pw modal bug fixed

--- a/userProfile.html
+++ b/userProfile.html
@@ -319,15 +319,16 @@
                                         <div class="ripple-container"></div>
 
                                     </button>
-
-                                    <button class="btn btn-warning yekanFont normalFontSize" data-toggle="modal" data-target="#loginModal">
-                                        <i class="material-icons">lock</i>
-                                        تغییر رمز عبور
-                                        <div class="ripple-container"></div>
-                                    </button>
-
                                 </div>
                             </form>
+                            <div class="text-left row" style="margin-left:30px;">
+                                <button class="btn btn-warning yekanFont normalFontSize" data-toggle="modal" data-target="#loginModal">
+                                    <i class="material-icons">lock</i>
+                                    تغییر رمز عبور
+                                    <div class="ripple-container"></div>
+                                </button>
+                            </div>
+
                         </div>
                     </div>
                 </div>
