some icon bugs fixed

--- a/userProfile.html
+++ b/userProfile.html
@@ -124,25 +124,25 @@
                             <ul class="nav nav-pills nav-pills-info nav-pills-icons yekanFont" role="tablist">
                                 <li class="">
                                     <a href="#editProfile" role="tab" data-toggle="tab" aria-expanded="false">
-                                        <i class="material-icons">palette</i>
+                                        <i class="material-icons">edit</i>
                                         ویرایش پروفایل
                                     </a>
                                 </li>
                                 <li class="">
                                     <a href="#cafeDiscounts" role="tab" data-toggle="tab" aria-expanded="false">
-                                        <i class="material-icons">people</i>
+                                        <i class="material-icons">local_cafe</i>
                                         تخفیفات کافه ها
                                     </a>
                                 </li>
                                 <li class="">
                                     <a href="#viewProfile" role="tab" data-toggle="tab" aria-expanded="true">
-                                        <i class="material-icons">camera</i>
+                                        <i class="material-icons">person</i>
                                         مشاهده پروفایل
                                     </a>
                                 </li>
                                 <li class="active">
                                     <a href="#visitedBooklets" role="tab" data-toggle="tab" aria-expanded="true">
-                                        <i class="material-icons">camera</i>
+                                        <i class="material-icons">note</i>
                                         جزوات مشاهده شده
                                     </a>
                                 </li>
@@ -151,8 +151,7 @@
 
                         </div>
                     </div>
-
-                    <div class="tab-content">
+                    <div class="tab-content" style="margin-top:30px;">
                         <div class="tab-pane active" id="visitedBooklets">
                             <div class="row">
                                 <div class="col-md-12">
