--- a/cafeList.html
+++ b/cafeList.html
@@ -748,6 +748,19 @@
                     <!--</div>-->
                 <!--</div>-->
             <!--</div>-->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <ul class="pagination pagination-primary">
+                        <li id="goPrevPage"><a href="#">></a></li>
+                        <li><a href="#">1</a></li>
+                        <li class="active"><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">5</a></li>
+                        <li id="goNextPage"><a href="#"><</a></li>
+                    </ul>
+                </div>
+            </div>
             <hr>
         </div>
     </div><!-- section -->
